--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,7 @@
       },
       "recommended": true,
       "suspicious": {
+        "noTsIgnore": "off",
         "noGlobalIsFinite": "off",
         "noFunctionAssign": "off",
         "noGlobalIsNan": "off",
@@ -61,6 +62,8 @@
         "noVar": "off"
       },
       "a11y": {
+        "noStaticElementInteractions": "off",
+        "noLabelWithoutControl": "off",
         "useMediaCaption": "off",
         "noPositiveTabindex": "off",
         "noAutofocus": "off",
@@ -86,6 +89,7 @@
         "noArguments": "off"
       },
       "correctness": {
+        "noUnusedFunctionParameters": "off",
         "noConstAssign": "off",
         "noInvalidUseBeforeDeclaration": "off",
         "noUnreachable": "off",
